--- a/docker/image/Dockerfile
+++ b/docker/image/Dockerfile
@@ -1,7 +1,10 @@
-FROM ubuntu:14.04
+FROM gliderlabs/alpine
 
-RUN apt-get -y update && apt-get -y upgrade
 RUN mkdir /redismux
 ADD files/redismux /redismux/redismux
 ADD files/redis-server /redismux/bin/redis-server
 ADD files/redis.conf /redismux/config/redis.conf
+
+EXPOSE 6379
+
+CMD /redismux/redismux
