more error handling, correct image

--- a/docker/image/Dockerfile
+++ b/docker/image/Dockerfile
@@ -4,7 +4,10 @@ RUN mkdir /redismux
 ADD files/redismux /redismux/redismux
 ADD files/redis-server /redismux/bin/redis-server
 ADD files/redis.conf /redismux/config/redis.conf
+ADD start.sh /redismux/start.sh
 
 EXPOSE 6379
 
-CMD /redismux/redismux
+WORKDIR /redismux
+
+CMD /redismux/start.sh
